# mcp-learning

./: main.py  pyproject.toml
code/mcp-build-chess/: chess_api.py  pyproject.toml
code/mcp-build-chess/src/chess/: test.py
code/mcp-build-client-agent-airbnb-memory/: chat_ui.py  client.py  main.py  pyproject.toml
code/mcp-build-memory-tracker/: pyproject.toml
code/mcp-client/: client_query.py  client_simple.py
code/mcp-primitives-and-inputs/: main.py  prompt.py  pyproject.toml  requirements.txt
code/mcp-server-deepdive-deployment/: README.md
code/mcp-server-deepdive-deployment/src/mcp_server_deepdive_deployment.egg-info/: PKG-INFO
code/mcp-server-deepdive-functionality/: crypto.py  log.txt  main.py  notes.txt  other_inputs.py  pyproject.toml  screenshot.py  websearch.py
code/mcp-server-http-streamable-updated/: pyproject.toml  server.py
code/quickstart/client/: pyproject.toml  weather.py
code/quickstart/server/: main.py  pyproject.toml
helloworld/: client.py  pyproject.toml  weather.py
kodekloud/python-example/: main.py  pyproject.toml
openai/: say_task.py
openai/math-olympiad-mentor/: .dockerignore  Dockerfile  README-WEB-DEPLOY.md  README.md  agent.py  app_gui.py  requirements-web.txt  requirements.txt  web_app.py
openai/math-olympiad-mentor/books/: README.txt
openai/math-olympiad-mentor/data/: memory.json  students.json
openai/math-olympiad-mentor/docs/: architecture-and-flow.md  using-ollama.md
openai/math-olympiad-mentor/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
openai/notemaker/: notemaker.py  notes.txt
(+1 files in other folders)
